[gd_scene load_steps=10 format=3 uid="uid://kwiq7bhx1j3r"]

[ext_resource type="Script" uid="uid://ctl66uo3agcy3" path="res://Levels/TestLevels/menu.gd" id="1_2qrs6"]
[ext_resource type="Texture2D" uid="uid://c1ruxe5tq7d1q" path="res://Assets/Menu/unpushed play (1).png" id="1_pi7an"]
[ext_resource type="Texture2D" uid="uid://j3vjh8u7qgsp" path="res://Assets/Menu/pushed play (1).png" id="2_2qrs6"]
[ext_resource type="Texture2D" uid="uid://bg851u8aa3noq" path="res://Assets/Menu/title blue.png" id="2_eawe1"]
[ext_resource type="Texture2D" uid="uid://dhjr3q1jem3mi" path="res://Assets/Menu/unpushed tutorial (1).png" id="3_eawe1"]
[ext_resource type="Texture2D" uid="uid://sq3pxc7g47o" path="res://Assets/Menu/pushed tutorial (1).png" id="4_3n2il"]
[ext_resource type="AudioStream" uid="uid://dgsefojuoyayq" path="res://Assets/Sounds/Music_Menu.mp3" id="7_3n2il"]
[ext_resource type="AudioStream" uid="uid://8dluew2npsl6" path="res://Assets/Sounds/Button_hover.wav" id="7_a3y6i"]
[ext_resource type="AudioStream" uid="uid://bujbdsg70n1a6" path="res://Assets/Sounds/Button_press.wav" id="8_7g6gk"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2qrs6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(573.5, 322)
scale = Vector2(1.24892, 1.24904)
texture = ExtResource("2_eawe1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
offset_left = 48.0
offset_top = 284.0
offset_right = 198.0
offset_bottom = 434.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Play" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
size_flags_vertical = 2
texture_normal = ExtResource("1_pi7an")
texture_hover = ExtResource("2_2qrs6")
stretch_mode = 4

[node name="Tutorial" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
texture_normal = ExtResource("3_eawe1")
texture_hover = ExtResource("4_3n2il")
ignore_texture_size = true
stretch_mode = 4

[node name="Button_hover" type="AudioStreamPlayer2D" parent="VBoxContainer"]
stream = ExtResource("7_a3y6i")

[node name="Button_Click" type="AudioStreamPlayer2D" parent="VBoxContainer"]
stream = ExtResource("8_7g6gk")

[node name="Menu_Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3n2il")
volume_db = 7.0
autoplay = true

[connection signal="mouse_entered" from="VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
